--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+backend/hypertube/imdb_data/data/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -172,3 +174,4 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
