--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,35 @@
+
 services:
   frontend:
     container_name: frontend
     build: ./frontend
     ports:
-      - "3000:3000"
-    depends_on:
-      - backend-api
+      - "4000:4000"
+    volumes:
+      - ./frontend:/app  # Monte les fichiers locaux dans le conteneur pour hot reload
+      - /app/node_modules  # Assure que les modules installés sont persistants
     networks:
       - hypertube-net
+    environment:
+      - NODE_ENV=development
+    stdin_open: true  # Permet une interaction continue
+    tty: true  # Nécessaire pour le hot reload
 
   backend-api:
-    container_name: backend
-    build: ./backend
+    container_name: backend-api
+    build:
+      context: . # Contexte de build à la racine du projet
+      dockerfile: ./backend/Dockerfile  # Spécifie explicitement le chemin vers le Dockerfile
+    ports:
+      - "5000:5000"
     env_file:
       - .env
+    volumes:
+      - ./backend/hypertube:/app
+    networks:
+      - hypertube-net
     depends_on:
       - db
-    networks:
-      - hypertube-net
-
-  streamer:
-    container_name: stream
-    build: ./streamer
-    volumes:
-      - ./videos:/app/videos
-    depends_on:
-      - backend-api
-    networks:
-      - hypertube-net
 
   nginx:
     container_name: server
@@ -37,11 +39,11 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    networks:
+      - hypertube-net
     depends_on:
       - frontend
       - backend-api
-    networks:
-      - hypertube-net
 
   db:
     container_name: db
@@ -55,14 +57,42 @@ services:
     networks:
       - hypertube-net
 
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4:latest
+    ports:
+      - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: "admin@admin.com"
+      PGADMIN_DEFAULT_PASSWORD: "admin"
+    networks:
+      - hypertube-net
+    depends_on:
+      - db
+
   redis:
     container_name: redis
     image: redis:alpine
+    ports:
+      - "6379:6379"
     networks:
       - hypertube-net
 
+  # streamer:
+  #   container_name: stream
+  #   build: ./streamer  # Si tu as un Dockerfile dans le répertoire ./streamer
+  #   volumes:
+  #     - ./videos:/app/videos
+  #   networks:
+  #     - hypertube-net
+  #   depends_on:
+  #     - backend-api
+
 networks:
   hypertube-net:
+    driver: bridge
 
 volumes:
   pgdata:
+    driver: local
+
