--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,10 +35,11 @@ services:
     container_name: server
     image: nginx:alpine
     ports:
-      - "80:80"
-      - "443:443"
+      - "8880:8880"
+      - "8443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - .nginx/certs:/etc/nginx/certs
     networks:
       - hypertube-net
     depends_on:
@@ -74,7 +75,7 @@ services:
     container_name: redis
     image: redis:alpine
     ports:
-      - "6379:6379"
+      - "6380:6379"
     networks:
       - hypertube-net
 
