--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,9 +48,14 @@ services:
 
   db:
     container_name: db
+    build:
+      context: ./db
+      dockerfile: Dockerfile
     image: postgres:17
     volumes:
       - pgdata:/var/lib/postgresql/data
+      # - ./db/script.sh:/docker-entrypoint-initdb.d/01_script.sh
+      # - ./backend/hypertube/imdb_data/data:/data
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: pass
