--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,11 @@ services:
     stdin_open: true  # Permet une interaction continue
     tty: true  # Nécessaire pour le hot reload
 
-  backend-api:
-    container_name: backend-api
+  backend:
+    container_name: backend
     build:
-      context: . # Contexte de build à la racine du projet
-      dockerfile: ./backend/Dockerfile  # Spécifie explicitement le chemin vers le Dockerfile
+      context: .
+      dockerfile: ./backend/Dockerfile
     ports:
       - "5000:5000"
     env_file:
@@ -32,6 +32,40 @@ services:
       db:
         condition: service_healthy
 
+  backend-user:
+    container_name: backend-user
+    build:
+      context: .
+      dockerfile: ./auth/Dockerfile
+    ports:
+      - "6000:6000"
+    env_file:
+      - .env
+    volumes:
+      - ./backend/hypertube:/app
+    networks:
+      - hypertube-net
+    depends_on:
+      db:
+        condition: service_healthy
+
+  # backend-api:
+  #   container_name: backend-api
+  #   build:
+  #     context: .
+  #     dockerfile: ./auth/Dockerfile
+  #   ports:
+  #     - "7000:7000"
+  #   env_file:
+  #     - .env
+  #   volumes:
+  #     - ./backend/hypertube:/app
+  #   networks:
+  #     - hypertube-net
+  #   depends_on:
+  #     db:
+  #       condition: service_healthy
+  #
   nginx:
     container_name: server
     image: nginx:alpine
@@ -45,7 +79,7 @@ services:
       - hypertube-net
     depends_on:
       - frontend
-      - backend-api
+      - backend
 
   db:
     container_name: db
@@ -83,13 +117,13 @@ services:
     depends_on:
       - db
 
-  redis:
-    container_name: redis
-    image: redis:alpine
-    ports:
-      - "6380:6379"
-    networks:
-      - hypertube-net
+  # redis:
+  #   container_name: redis
+  #   image: redis:alpine
+  #   ports:
+  #     - "6380:6379"
+  #   networks:
+  #     - hypertube-net
 
 
   # streamer:
@@ -100,7 +134,7 @@ services:
   #   networks:
   #     - hypertube-net
   #   depends_on:
-  #     - backend-api
+  #     - backend
 
 networks:
   hypertube-net:
