--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 backend/hypertube/imdb_data/data/
 frontend/.next/
+frontend/node_modules/
 sauvegarde.dump
 
 # Byte-compiled / optimized / DLL files
@@ -18,7 +19,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
