--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,42 @@
-
 services:
+  nginx:
+    container_name: server  
+    image: nginx:alpine
+    ports:
+      - "8880:80"
+      - "8443:443"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/ssl:/etc/ssl
+    networks:
+      - hypertube-net
+    depends_on:
+      - frontend
+    #   - api
+    #   - auth
+    #   - streamer
+    #   - user-management
+
   frontend:
     container_name: frontend
     build: ./frontend
     ports:
       - "4000:4000"
     volumes:
-      - ./frontend:/app  # Monte les fichiers locaux dans le conteneur pour hot reload
-      - /app/node_modules  # Assure que les modules installés sont persistants
+      - ./frontend:/app
+      - /app/node_modules
     networks:
       - hypertube-net
     environment:
       - NODE_ENV=development
-    stdin_open: true  # Permet une interaction continue
-    tty: true  # Nécessaire pour le hot reload
+    stdin_open: true
+    tty: true
 
-  backend:
-    container_name: backend
+  backend-api:
+    container_name: backend-api
     build:
       context: .
-      dockerfile: ./backend/Dockerfile
+      dockerfile: ./auth/Dockerfile
     ports:
       - "5000:5000"
     env_file:
@@ -48,38 +65,6 @@ services:
     depends_on:
       db:
         condition: service_healthy
-
-  # backend-api:
-  #   container_name: backend-api
-  #   build:
-  #     context: .
-  #     dockerfile: ./auth/Dockerfile
-  #   ports:
-  #     - "7000:7000"
-  #   env_file:
-  #     - .env
-  #   volumes:
-  #     - ./backend/hypertube:/app
-  #   networks:
-  #     - hypertube-net
-  #   depends_on:
-  #     db:
-  #       condition: service_healthy
-  #
-  nginx:
-    container_name: server
-    image: nginx:alpine
-    ports:
-      - "8880:8880"
-      - "8443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - .nginx/certs:/etc/nginx/certs
-    networks:
-      - hypertube-net
-    depends_on:
-      - frontend
-      - backend
 
   db:
     container_name: db
@@ -125,7 +110,6 @@ services:
   #   networks:
   #     - hypertube-net
 
-
   # streamer:
   #   container_name: stream
   #   build: ./streamer  # Si tu as un Dockerfile dans le répertoire ./streamer
@@ -143,4 +127,3 @@ networks:
 volumes:
   pgdata:
     driver: local
-
