--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 backend/hypertube/imdb_data/data/
 frontend/.next/
 frontend/node_modules/
+frontend/.env.local/
+frontend/.env.prod/
 sauvegarde.dump
 
 # Byte-compiled / optimized / DLL files
