--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,4 +15,5 @@ sqlparse==0.5.3
 tzdata==2025.2
 urllib3==2.4.0
 psycopg2-binary==2.9.6
-qbittorrent-api==2025.5.0
+dotenv==0.9.9
+python-dotenv==1.1.0
