--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,18 +73,20 @@ services:
       retries: 5
       start_period: 15s
 
-  # pgadmin:
-  #   container_name: pgadmin
-  #   image: dpage/pgadmin4:latest
-  #   ports:
-  #     - "5050:80"
-  #   environment:
-  #     PGADMIN_DEFAULT_EMAIL: "admin@admin.com"
-  #     PGADMIN_DEFAULT_PASSWORD: "admin"
-  #   networks:
-  #     - hypertube-net
-  #   depends_on:
-  #     - db
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4:latest
+    ports:
+      - "5050:80"
+    env_file:
+      - .env
+    volumes:
+      - ./services/pgadmin/servers.json:/pgadmin4/servers.json
+      - pgadmin-data:/var/lib/pgadmin
+    networks:
+      - hypertube-net
+    depends_on:
+      - postgresql
 
 networks:
   hypertube-net:
@@ -93,3 +95,4 @@ networks:
 volumes:
   pgdata:
     driver: local
+  pgadmin-data:
