bon debut sur le scraping la recherche verifie bien que le torrent existe sur la source (stable qu'en anglais)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,20 @@ services:
     depends_on:
       db:
         condition: service_healthy
-
+  scraper:
+    container_name: scraper
+    build:
+      context: ./scraper
+      dockerfile: Dockerfile
+    expose:
+      - 8000
+    volumes:
+      - ./scraper:/app
+    networks:
+      - hypertube-net
+    depends_on:
+      db:
+        condition: service_healthy
   # backend-user:
   #   container_name: backend-user
   #   build:
