--- a/services/backend-movies/Dockerfile
+++ b/services/backend-movies/Dockerfile
@@ -5,19 +5,18 @@ FROM python:3.10-slim
 
 # Étape 2 : Définir le répertoire de travail à l'intérieur du container
 WORKDIR /app
+COPY . .
 
 # Étape 3 : Copier les fichiers requirements.txt et installer les dépendances
-COPY backend/requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
 
 RUN apt-get update && apt-get install -y postgresql-client
 
 # Étape 4 : Copier tout le code source dans le container
-COPY backend/hypertube /app/
 
 # Étape 5 : Exposer le port 8000 pour Django
-EXPOSE 5000
+EXPOSE 7000
 
 # Étape 6 : Lancer le serveur Django (en mode de développement)
-CMD ["python", "manage.py", "runserver", "0.0.0.0:5000"]
+CMD ["uvicorn", "hypertube.asgi:application", "--host", "0.0.0.0", "--port", "7000", "--reload"]
 
