--- a/services/nginx/default.conf
+++ b/services/nginx/default.conf
@@ -3,7 +3,7 @@ limit_req_zone $binary_remote_addr zone=api_limit:10m rate=5r/s;
 server {
     listen 80;
     server_name localhost;
-    return 301 https://$host$request_uri;
+    return 301 https://$host:8443$request_uri;
 }
 
 server {
@@ -25,6 +25,7 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     add_header Permissions-Policy "geolocation=(), microphone=()" always;
+    
 
     client_max_body_size 20M;
     gzip on;
@@ -41,7 +42,7 @@ server {
 
     location /api/ {
         limit_req zone=api_limit burst=10 nodelay;
-        proxy_pass http://backend-api:8000;
+        proxy_pass http://backend-api:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
