--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ frontend/node_modules/
 frontend/.env.local/
 frontend/.env.prod/
 .next
+node_modules
 sauvegarde.dump
 
 # Byte-compiled / optimized / DLL files
