--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,18 +17,19 @@ services:
 
   frontend:
     container_name: frontend
-    build: ./services/frontend
+    build:
+      context: ./services/frontend
+      dockerfile: Dockerfile
+      args:
+        NODE_ENV: production
+        NEXT_PUBIC_HOSTNAME: ${NEXT_PUBLIC_HOSTNAME}
     ports:
       - "4000:4000"
-    volumes:
-      - ./services/frontend:/app
-      - /app/node_modules #il faut le traiter avec les variable d'env sinon pb de droits
+    # volumes:
+    #   - ./services/frontend:/app
+    #   - /app/node_modules #il faut le traiter avec les variable d'env sinon pb de droits
     networks:
       - hypertube-net
-    environment:
-      - NODE_ENV=development
-    env_file:
-      - .env
     stdin_open: true
     tty: true
 
