--- a/services/nginx/default.conf
+++ b/services/nginx/default.conf
@@ -31,6 +31,15 @@ server {
     gzip on;
     gzip_types text/plain application/json application/javascript text/css;
 
+	location /_next/ {
+		proxy_pass http://frontend:4000;
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		limit_except GET HEAD { deny all; }
+	}
+
     location / {
         proxy_pass http://frontend:4000;
         proxy_set_header Host $host;
@@ -61,8 +70,5 @@ server {
     #     limit_except GET HEAD { deny all; }
     # }
 
-    location ~* \.(jpg|jpeg|png|gif|ico|webp|css|js|vtt)$ {
-        expires 7d;
-        add_header Cache-Control "public, no-transform";
-    }
+
 }
