--- a/services/nginx/default.conf
+++ b/services/nginx/default.conf
@@ -31,14 +31,14 @@ server {
     gzip on;
     gzip_types text/plain application/json application/javascript text/css;
 
-	location /_next/ {
-		proxy_pass http://frontend:4000;
-		proxy_set_header Host $host;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header X-Forwarded-Proto $scheme;
-		limit_except GET HEAD { deny all; }
-	}
+	# location /_next/ {
+	# 	proxy_pass http://frontend:4000;
+	# 	proxy_set_header Host $host;
+	# 	proxy_set_header X-Real-IP $remote_addr;
+	# 	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+	# 	proxy_set_header X-Forwarded-Proto $scheme;
+	# 	limit_except GET HEAD { deny all; }
+	# }
 
     location / {
         proxy_pass http://frontend:4000;
@@ -47,6 +47,12 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         limit_except GET HEAD { deny all; }
+        
+        # WebSocket support
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        
     }
 
     location /api/ {
