--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,14 @@
 services:
   nginx:
-    container_name: nginx  
-    image: nginx:latest
+    build: 
+      context: ./services/nginx
+      dockerfile: Dockerfile
+      args:
+        DOMAIN_NAME: 10.13.1.4
+    container_name: nginx
     ports:
       - "8880:80"
       - "8443:443"
-    volumes:
-      - ./services/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./services/nginx/ssl:/etc/ssl
     networks:
       - hypertube-net
     depends_on:
