--- a/services/nginx/default.conf
+++ b/services/nginx/default.conf
@@ -10,8 +10,8 @@ server {
     listen 443 ssl;
     server_name localhost;
 
-    ssl_certificate /etc/ssl/hypertube.crt;
-    ssl_certificate_key /etc/ssl/hypertube.key;
+    ssl_certificate /etc/nginx/ssl/hypertube.crt;
+    ssl_certificate_key /etc/nginx/ssl/hypertube.key;
     ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
     ssl_prefer_server_ciphers on;
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -30,15 +30,6 @@ server {
     client_max_body_size 20M;
     gzip on;
     gzip_types text/plain application/json application/javascript text/css;
-
-	# location /_next/ {
-	# 	proxy_pass http://frontend:4000;
-	# 	proxy_set_header Host $host;
-	# 	proxy_set_header X-Real-IP $remote_addr;
-	# 	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-	# 	proxy_set_header X-Forwarded-Proto $scheme;
-	# 	limit_except GET HEAD { deny all; }
-	# }
 
     location / {
         proxy_pass http://frontend:4000;
