--- a/services/nginx/default.conf
+++ b/services/nginx/default.conf
@@ -1,12 +1,6 @@
 limit_req_zone $binary_remote_addr zone=api_limit:10m rate=5r/s;
 
 server {
-    listen 80;
-    server_name localhost;
-    return 301 https://$host:8443$request_uri;
-}
-
-server {
     listen 443 ssl;
     server_name localhost;
 
@@ -18,6 +12,7 @@ server {
 
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log warn;
+    error_page 497 = @https_redirect;
 
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options nosniff;
@@ -26,10 +21,13 @@ server {
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     add_header Permissions-Policy "geolocation=(), microphone=()" always;
     
-
     client_max_body_size 20M;
     gzip on;
     gzip_types text/plain application/json application/javascript text/css;
+
+    location @https_redirect {
+        return 301 https://localhost$request_uri;
+    }
 
     location / {
         proxy_pass http://frontend:4000;
@@ -46,9 +44,18 @@ server {
         
     }
 
-    location /api/ {
+    location /users/ {
         limit_req zone=api_limit burst=10 nodelay;
-        proxy_pass http://backend-api:5000;
+        proxy_pass http://backend-movies:6000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /movies/ {
+        limit_req zone=api_limit burst=10 nodelay;
+        proxy_pass http://backend-movies:7000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -66,6 +73,4 @@ server {
     #     proxy_set_header X-Forwarded-Proto $scheme;
     #     limit_except GET HEAD { deny all; }
     # }
-
-
 }
