FIX-languageSwitcher/Font

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,7 +1,6 @@
 services:
   frontend:
-    volumes:
-      []
+    volumes: !reset []
     build: 
       args:
-        - NODE_ENV=production
+        NODE_ENV: production
