--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,8 @@ services:
       - ./services/backend-scraper:/app
     networks:
       - hypertube-net
+    env_file:
+      - ./.env
     # depends_on:
     #   postgresql:
     #     condition: service_healthy
