--- a/services/backend-scraper/requirements.txt
+++ b/services/backend-scraper/requirements.txt
@@ -2,3 +2,7 @@ fastapi==0.115.12
 httpx==0.28.1
 uvicorn== 0.34.2
 beautifulsoup4==4.13.4
+async-timeout==5.0.1
+asyncpg==0.30.0
+dotenv==0.9.9
+python-dotenv==1.1.0
