--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,9 +72,9 @@ services:
       - hypertube-net
     env_file:
       - .env
-    # depends_on:
-    #   postgresql:
-    #     condition: service_healthy
+    depends_on:
+      postgresql:
+        condition: service_healthy
 
   postgresql:
     container_name: postgresql
@@ -91,6 +91,21 @@ services:
       timeout: 30s
       retries: 5
       start_period: 15s
+
+  db-manager:
+    image: postgres:17
+    container_name: db-manager
+    env_file: .env
+    volumes:
+      - ./services/db-manager/script.sh:/script.sh:ro
+    entrypoint: ["bash", "/script.sh"]
+    networks:
+      - hypertube-net
+    depends_on:
+      - postgresql
+      - backend-user
+      - backend-movies
+    restart: "no"
 
   pgadmin:
     container_name: pgadmin
