--- a/services/postgres-db/Dockerfile
+++ b/services/postgres-db/Dockerfile
@@ -1,6 +1,7 @@
-FROM postgres:17
+FROM postgres:17-alpine
 
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
 COPY init-db.sh /docker-entrypoint-initdb.d/init-db.sh
-# RUN chmod +x /docker-entrypoint-initdb.d/init-db.sh
+
+RUN chmod +x /docker-entrypoint-initdb.d/init-db.sh
