--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,7 @@ services:
     image: postgres:17
     volumes:
       - pgdata:/var/lib/postgresql/data
+      - ./services/postgres-db/init-roles.sh:/docker-entrypoint-initdb.d/init-roles.sh:ro
     env_file:
       - .env
     networks:
