--- a/services/backend-user/requirements.txt
+++ b/services/backend-user/requirements.txt
@@ -1,5 +1,6 @@
 Django==5.2.1
 djangorestframework==3.16.00
+djangorestframework-simplejwt==5.5.0
 python-dotenv==1.1.0
 uvicorn==0.34.2
 psycopg2-binary==2.9.10
