--- a/services/nginx/default.conf
+++ b/services/nginx/default.conf
@@ -46,7 +46,7 @@ server {
 
     location /users/ {
         limit_req zone=api_limit burst=10 nodelay;
-        proxy_pass http://backend-movies:6000;
+        proxy_pass http://backend-user:6000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
