backend scraper: db connection setup the backend scraper now uses the database to save the results of the scraping process. The database connection is established using the psycopg2 library, and the results are saved in a table called "movies". The connection details are stored in a separate config file for better organization and security. The scraper now also handles errors more gracefully, logging any issues that arise during the scraping process. At the start of the scraping process, the scraper connects to the database and search if the movies already exists in it.
TODO:
- optimize the database requests to decrease the time of the scraping process
- potientially add a storing system for the film not found on the sources
- add an expiration date to the movies in the database (preferably managed by the db directly)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,8 +57,11 @@ services:
       - ./services/backend-scraper:/app
     networks:
       - hypertube-net
-    env_file:
-      - ./.env
+    environment:
+      - POSTGRES_USER=${BACKEND_SCRAPER_NAME}
+      - POSTGRES_PASSWORD=${BACKEND_SCRAPER_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_HOST=postgresql
     # depends_on:
     #   postgresql:
     #     condition: service_healthy
