--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - hypertube-net
     depends_on:
       - frontend
-      - backend-user
+      - backend_user
 
   frontend:
     container_name: frontend
@@ -32,15 +32,15 @@ services:
     stdin_open: true
     tty: true
 
-  backend-user:
-    container_name: backend-user
-    build: ./services/backend-user
+  backend_user:
+    container_name: backend_user
+    build: services/backend_user
     expose:
       - 6000
     env_file:
       - .env
     volumes:
-      - ./services/backend-user:/app
+      - ./services/backend_user:/app
     networks:
       - hypertube-net
     depends_on:
@@ -106,7 +106,7 @@ services:
       - hypertube-net
     depends_on:
       - postgresql
-      - backend-user
+      - backend_user
       - backend-movies
     restart: "no"
 
