--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,12 +83,18 @@ services:
 
   postgresql:
     container_name: postgresql
-    image: postgres:17
+    # image: postgres:17
+    build:
+      context: ./services/postgres-db
+      dockerfile: Dockerfile
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - ./services/postgres-db/init-roles.sh:/docker-entrypoint-initdb.d/init-roles.sh:ro
+      - ./services/postgres-db/init_pg_cron.sh:/docker-entrypoint-initdb.d/002_init_pg_cron.sh:ro
+      - ./services/postgres-db/init-roles.sh:/docker-entrypoint-initdb.d/003_init-roles.sh:ro
     env_file:
       - .env
+    environment:
+      - TZ=Europe/Paris
     networks:
       - hypertube-net
     ports:
