--- a/services/backend_user/requirements.txt
+++ b/services/backend_user/requirements.txt
@@ -4,4 +4,5 @@ djangorestframework-simplejwt==5.5.0
 python-dotenv==1.1.0
 uvicorn==0.34.2
 psycopg2-binary==2.9.10
-django-extensions==4.1 
+django-extensions==4.1
+requests==2.32.4
