--- a/services/nginx/default.conf
+++ b/services/nginx/default.conf
@@ -55,7 +55,7 @@ server {
 
     location /movies/ {
         limit_req zone=api_limit burst=10 nodelay;
-        proxy_pass http://backend-movies:7000;
+        proxy_pass http://backend_movies:7000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
